#216 add kpi model
