# app/server/src/utils/reportUtils.ts
@@ -15,12 +15,26 @@
  */
 
 import { Project } from '@interfaces/project.interface';
-import { Quarter, Report, ReportState, ReportStatus, Status, StatusType, Trend } from '@interfaces/report.interface';
+import {
+  Kpi,
+  Quarter,
+  Report,
+  ReportState,
+  ReportStatus,
+  Status,
+  StatusType,
+  Trend,
+} from '@interfaces/report.interface';
 import MilestoneDTO from '@dtos/MilestoneDTO';
 import ObjectiveDTO from '@dtos/ObjectiveDTO';
 
 // eslint-disable-next-line import/prefer-default-export
-export const getInitialReport = (project: Project, milestones: MilestoneDTO[], objectives: ObjectiveDTO[]): Report => {
+export const getInitialReport = (
+  project: Project,
+  milestones: MilestoneDTO[],
+  objectives: ObjectiveDTO[],
+  kpis: Kpi[],
+): Report => {
   const { id: projectId, estimatedEnd, start, manager: submitter } = project;
 
   const year = start.getFullYear();
@@ -53,6 +67,7 @@ export const getInitialReport = (project: Project, milestones: MilestoneDTO[], o
     year,
     milestones,
     objectives,
+    kpis,
   };
   return report;
 };
