# app/server/swagger.yaml
@@ -960,6 +960,14 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Milestone'
+        objectives:
+          type: array
+          items:
+            $ref: '#/components/schemas/ObjectiveRequest'
+        kpis:
+          type: array
+          items:
+            $ref: '#/components/schemas/KpiRequest'
       required:
         - submitter
         - projectId
@@ -1023,6 +1031,29 @@ components:
         - name
         - start
         - estimatedEnd
+    KpiRequest:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        end:
+          type: string
+          format: date
+        unit:
+          type: string
+        baseline:
+          type: integer
+        target:
+          type: integer
+        outcome:
+          type: boolean
+        output:
+          type: boolean
+      required:
+        - name
+        - end
     ReportStatusRequest:
       type: object
       properties:
@@ -1065,6 +1096,10 @@ components:
       allOf:
         - $ref: '#/components/schemas/ReportStatusRequest'
         - $ref: '#/components/schemas/CommonProperties'
+    Kpi:
+      allOf:
+        - $ref: '#/components/schemas/KpiRequest'
+        - $ref: '#/components/schemas/CommonProperties'
     Project:
       allOf:
         - $ref: '#/components/schemas/ProjectRequest'
@@ -1085,6 +1120,18 @@ components:
           properties:
             submitter:
               $ref: '#/components/schemas/User'
+            milestones:
+              type: array
+              items:
+                $ref: '#/components/schemas/Milestone'
+            objectives:
+              type: array
+              items:
+                $ref: '#/components/schemas/Objective'
+            kpis:
+              type: array
+              items:
+                $ref: '#/components/schemas/Kpi'
     ProjectCreateRequest:
       allOf:
         - $ref: '#/components/schemas/ProjectRequest'
@@ -1098,6 +1145,10 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/ObjectiveRequest'
+            kpis:
+              type: array
+              items:
+                $ref: '#/components/schemas/KpiRequest'
     UserRequest:
       allOf:
         - $ref: '#/components/schemas/LoginRequest'
